# ChangeLog for net-libs/nodejs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/nodejs/ChangeLog,v 1.133 2015/01/23 08:17:26 patrick Exp $

*nodejs-0.11.15 (23 Jan 2015)

  23 Jan 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.11.15.ebuild:
  Bump, remove snapshot useflag as upstream removed the feature

*nodejs-0.10.35 (22 Jan 2015)

  22 Jan 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.35.ebuild:
  Bump

*nodejs-0.10.33 (28 Oct 2014)
*nodejs-0.11.14 (28 Oct 2014)

  28 Oct 2014; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.33.ebuild,
  +nodejs-0.11.14.ebuild:
  Bump

*nodejs-0.10.32 (17 Sep 2014)

  17 Sep 2014; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.32.ebuild:
  Bump

*nodejs-0.10.31 (21 Aug 2014)

  21 Aug 2014; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.31.ebuild:
  Bump

  06 Aug 2014; Patrick Lauer <patrick@gentoo.org> -nodejs-0.10.21.ebuild:
  Remove old

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> nodejs-0.10.30.ebuild:
  Stable for x86, wrt bug #518710

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> nodejs-0.10.30.ebuild:
  Stable for amd64, wrt bug #518710

  01 Aug 2014; Patrick Lauer <patrick@gentoo.org> -nodejs-0.10.28.ebuild,
  -nodejs-0.10.29-r1.ebuild, -nodejs-0.10.29.ebuild, -nodejs-0.8.26.ebuild,
  -nodejs-0.8.27.ebuild:
  Remove old

*nodejs-0.10.30 (01 Aug 2014)
*nodejs-0.8.28 (01 Aug 2014)

  01 Aug 2014; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.30.ebuild,
  +nodejs-0.8.28.ebuild:
  Bump

*nodejs-0.11.13-r1 (23 Jul 2014)

  23 Jul 2014; Patrick Lauer <patrick@gentoo.org> +nodejs-0.11.13-r1.ebuild:
  Small fixes and unbundling for 0.11

*nodejs-0.10.29-r1 (23 Jul 2014)

  23 Jul 2014; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.29-r1.ebuild:
  Small fixes and unbundling for 0.10

  23 Jul 2014; Patrick Lauer <patrick@gentoo.org> nodejs-0.10.29.ebuild,
  nodejs-0.11.13.ebuild, nodejs-0.8.27.ebuild:
  Add PYTHON_DEPS #487570
